# big_data_g2

./: README.md  dblp_cleaned.csv  duckdb_eda.ipynb  duckdb_feature_eng.ipynb  eda.ipynb  eda_nan_experiment.ipynb  eda_only.ipynb  feature_eng_baseline.ipynb  pyproject.toml  test_predictions.csv  train_pairs_features.csv  validation_predictions.csv
clean_data/: pbooktitle_clean.json  pbooktitlefull_clean.json  pjournal_clean.json  pjournalfull_clean.json
data/: README.md  duckdb_cleaned_dblp.csv  duckdb_cleaned_dblp_v2.csv
models/: random_forest.py  xgboost.py
